# light-sensor-circuit

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  USAGE.md  build.sh  platformio.ini
build_desktop_release/: CMakeCache.txt  CTestTestfile.cmake  LightSensorCircuitConfig.cmake  Makefile  cmake_install.cmake  test_config.json
build_desktop_release/examples/: Makefile  basic_sensor_example  cmake_install.cmake  complete_system_example  data_logging_example  power_management_example  signal_processing_example
build_desktop_release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  simple_tests
cmake/: LightSensorCircuitConfig.cmake.in
data/: calibration.json  config.json
examples/: CMakeLists.txt  arduino_example.cpp  basic_sensor_example.cpp  complete_system_example.cpp  data_logging_example.cpp  power_management_example.cpp  signal_processing_example.cpp
hardware/: README.md
include/: config_manager.h  data_logger.h  light_sensor.h  logger.h  power_manager.h  signal_processor.h  timer.h
src/: main.cpp
src/config/: config_manager.cpp
src/core/: light_sensor.cpp
src/power/: power_manager.cpp
src/signal/: signal_processor.cpp
src/storage/: data_logger.cpp
src/utils/: logger.cpp  timer.cpp
tests/: CMakeLists.txt  README.md  test_config_manager.cpp  test_config_manager.h  test_data_logger.cpp  test_data_logger.h  test_light_sensor.cpp  test_light_sensor.h  test_power_manager.cpp  test_power_manager.h  test_runner.cpp  test_signal_processor.cpp  test_signal_processor.h  test_utils.cpp  test_utils.h
